fix: replace deleted dark mode background image

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -65,7 +65,7 @@
   }
 
   html.dark body {
-    background-image: linear-gradient(rgba(0,0,0,0.75), rgba(0,0,0,0.75)), url('media/concert-scalping/image12.jpeg');
+    background-image: linear-gradient(rgba(0,0,0,0.75), rgba(0,0,0,0.75)), url('media/concert-scalping/image2.png');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
